--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         지금 많이 읽고 있는 작품
     </div>
   <div class="section">
-    <a href="#">
+    <!-- <a href="#"> -->
     <div class="swiper Swiper1"> 
       <div class="swiper-wrapper">
         <div class="swiper-slide"></div>
@@ -188,7 +188,7 @@
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
       </div>
-      </a>
+      <!-- </a> -->
   </div>
 
 
@@ -201,7 +201,7 @@
         오늘, 리디의 발견
     </div>
 <div class="section2">
-  <a href="#">
+  <!-- <a href="#"> -->
     <div class="swiper mySwiper2">
     <div class="swiper-wrapper">
       <div class="swiper-slide"></div>
@@ -225,7 +225,7 @@
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
   </div>
-  </a>
+  <!-- </a> -->
 </div>
 
 
@@ -238,7 +238,7 @@
       베스트
       </div>
       <div class="section3">
-        <a href="#">
+        <!-- <a href="#"> -->
     <div class="swiper Swiper3">
       <div class="swiper-wrapper">
         <div class="swiper-slide"></div>
@@ -268,7 +268,7 @@
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
     </div>
-    </a>
+    <!-- </a> -->
 </div>
 
 
@@ -278,7 +278,7 @@
       지금, 리디에서만! 선 출간 신작
       </div>
   <div class="section4">
-    <a href="#">
+    <!-- <a href="#"> -->
       <div class="swiper mySwiper2">
       <div class="swiper-wrapper">
       <div class="swiper-slide"></div>
@@ -290,7 +290,7 @@
       </div>
 
     </div>
-    </a>
+    <!-- </a> -->
   </div>
 
 
@@ -302,7 +302,7 @@
       새로 나온 작품
       </div>
   <div class="section5">
-    <a href="#">
+    <!-- <a href="#"> -->
       <div class="swiper mySwiper5">
       <div class="swiper-wrapper">
         <div class="swiper-slide"></div>
@@ -325,7 +325,7 @@
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
     </div>
-    </a>
+    <!-- </a> -->
   </div>
 
 
@@ -400,8 +400,8 @@
 
   <div class="footer-bottom container">
     <p>
-      <a href="#">이용약관</a> · 
-      <a href="#">개인정보 처리방침</a> · 
+      <a href="./sub3.html">이용약관</a> · 
+      <a href="#" style="font-weight: 700;">개인정보 처리방침</a> · 
       <a href="#">청소년보호정책</a> · 
       <a href="#">사업자정보확인</a>
     </p>
