--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
       <div class="title2">
       베스트
       </div>
+  <div class="section-wrapper">
       <div class="section3">
-        <!-- <a href="#"> -->
     <div class="swiper Swiper3">
       <div class="swiper-wrapper">
         <div class="swiper-slide"></div>
@@ -254,13 +254,11 @@
         <div class="swiper-slide"></div>
 
       </div>
-
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
     </div>
-    <!-- </a> -->
 </div>
-
+  <div class="custom-prev-3"><span>‹</span></div>
+  <div class="custom-next-3"><span>›</span></div>
+</div>
 
 
 
@@ -291,8 +289,8 @@
       <div class="title2">
       새로 나온 작품
       </div>
+        <div class="section-wrapper">
   <div class="section5">
-    <!-- <a href="#"> -->
       <div class="swiper mySwiper5">
       <div class="swiper-wrapper">
         <div class="swiper-slide"></div>
@@ -312,13 +310,11 @@
         <div class="swiper-slide"></div>
 
       </div>
-      <div class="custom-prev-1"><span>‹</span></div>
-      <div class="custom-next-1"><span>›</span></div>
     </div>
-    <!-- </a> -->
   </div>
-
-
+      <div class="custom-prev-4"><span>‹</span></div>
+      <div class="custom-next-4"><span>›</span></div>
+</div>
   
       <div class="title2">
       짧지만 강렬한 서사! 우주라이크소설
@@ -463,8 +459,8 @@
          clickable: true,
       },
       navigation: {
-        nextEl: ".custom-next",
-        prevEl: ".custom-prev",
+        nextEl: ".custom-next-3",
+        prevEl: ".custom-prev-3",
       },
     });
 
@@ -485,8 +481,8 @@
         clickable: true,
       },
       navigation: {
-        nextEl: ".custom-next",
-        prevEl: ".custom-prev",
+        nextEl: ".custom-next-4",
+        prevEl: ".custom-prev-4",
       },
     });
 
@@ -507,8 +503,8 @@
         clickable: true,
       },
       navigation: {
-        nextEl: ".custom-next",
-        prevEl: ".custom-prev",
+        nextEl: ".custom-next-5",
+        prevEl: ".custom-prev-5",
       },
     });
 
