--- a/sub3.html
+++ b/sub3.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-    <header>RIDI</header>
+    <header>
+    <img src="./img/RIDI_logo.svg" alt="RIDI 로고">
+    </header>
+
     <hr>
     
     <div class="box">
@@ -521,6 +524,8 @@
     </ul>
 
 </div>
+
+<hr>
 
 <footer>
     <strong> © RIDI Corp. </strong>
